welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:88: error: Unmatched closing brace '}' ignored here
}
^